# SKKAI-TourGenie

./: .env.example  .gitignore  README.md  eval_submission.py  mk_submit_baseline.py  pyproject.toml  temp.py
HM/: README.md
HM/runs/: 20251110_1728_mini.json
KY/: README.md  __init__.py
KY/aug_stage/stage1_baseline_persona_aug/: README.md  db_summary.py  hf_dataset_cache.py  persona_reference_retrieval.py  run_stage1.py  structured_output.py  tp_quantiles.py  travelplanner_loader.py
KY/aug_stage/stage1_survey_persona_aug/: PAPER.md  QUICKSTART.md  README.md  analyze_validator_feasibility.py  run.sh  (+9 more)
KY/multi_persona/: ARCHITECTURE.md  README.md  __init__.py  environment.yml  run_experiment.py
KY/tripcraft_augmentation/: augment_personas.py  csv_to_json.py  hard_rules.json  persona.json  structured_output.py
KY/viewer/: README.md  __init__.py  app.py  data_loader.py  environment.yml  preprocess.py
TJ/: README.md
YJ/: README.md
benchmarks/: __init__.py
benchmarks/TripCraft/: __init__.py  eval_runner.py  evaluator.py  leaderboard.py  run.sh
benchmarks/travelplanner/: __init__.py  eval_runner.py  eval_runner_hybrid.py  langgraph_dynamic_solver.py  leaderboard.py  sample_data.jsonl  schemas.py
examples/: team_submission_example copy.json  tripcraft_submission_example.jsonl
leaderboards/TravelPlanner/: README.md  main.md  mini.md
leaderboards/TripCraft/: main.md
results/tripcraft/: gpt41_test_mini.jsonl  gpt41mini_test_mini.jsonl
scripts/: eval_submission.py  fetch_travelplanner.py  fetch_tripcraft.py  tripcraft_eval.py  tripcraft_postprocess.py
(+1092 files in other folders)
