[tool.poetry]
name = "agentic-ai-workflow"
version = "0.1.0"
description = "Agentic AI workflows (LangGraph) with benchmark eval runners (TravelPlanner baseline)."
authors = ["Ki Yong Jung <wjdrldyd0213@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
langgraph = "^1.0.2"
langchain-core = "^1.0.2"
langsmith = "^0.4.39"
python-dotenv = "^1.2.1"
pydantic = "^2.12.3"
typer = "^0.20.0"
rich = "^14.2.0"
pyyaml = "^6.0.3"
tqdm = "^4.67.1"
datasets = "^4.3.0"
langchain-openai = "^1.0.1"
langchain-google-genai = "^3.0.0"
pandas = "^2.3.3"
func-timeout = "^4.3.5"
numpy = "^2.3.4"
openpyxl = "^3.1.5"
gradio = "^4.44.0"
requests = "^2.32.3"
tiktoken = "^0.7.0"
